crates/test-ui/ui/msg_send_underspecified_error1.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_underspecified_error1.rs
  |
  |     let _: Result<Retained<NSObject>, _> = unsafe { msg_send_id![obj, error: _] };
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
